# AI4DHN

./: .gitignore  README.md  pyproject.toml
src/ai4dhn/control/: dataset.py  main.py  physical_errors.py  postprocess.py  simulator.py  utilities.py  valves.py
src/ai4dhn/control/PPO_shared/: model_runner.py  ppo.py  trajectory.py
src/ai4dhn/control/RBC_shared/: main.py
src/ai4dhn/control/architectures/Simulink_components/: heat_exchanger.slx  storage_TC.slx  thermal_emitters.slx  thermal_pipe.slx  three_way_valve.slx
src/ai4dhn/control/architectures/parallel/: _interface.py
src/ai4dhn/control/architectures/parallel/PPO/: model_runner.py
src/ai4dhn/control/architectures/parallel/RBC1/: base_controllers.py  controller.py
src/ai4dhn/control/architectures/parallel/RBC2/: controller.py
src/ai4dhn/control/architectures/parallel/Simulink/: model_configuration.m  parallel_SST_model.slx
src/ai4dhn/control/architectures/parallel/Simulink/parallel_SST_model_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  ert_main.c.old  parallel_SST_model.c  parallel_SST_model.h  parallel_SST_model.mk  parallel_SST_model_data.c  parallel_SST_model_private.h  parallel_SST_model_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/ai4dhn/control/architectures/parallel/Simulink/parallel_SST_model_ert_rtw/tmwinternal/: simulink_cache.xml  tr
src/ai4dhn/interface_gen/: __init__.py  build.py  define_interface.py  main.py
src/ai4dhn/scenarios/: define_DHW_profile.py  define_SH_profile.py  merge.py
study_data/configs/: config_article.json
study_data/scenarios/building_1__test/: DHW_description.txt  SH_description.txt
study_data/scenarios/building_1__train/: DHW_description.txt  SH_description.txt  SST_parameters.json  constant_data.json
study_data/scenarios/building_2__test/: DHW_description.txt  SH_description.txt  SST_parameters.json
study_data/scenarios/building_2__train/: DHW_description.txt  SH_description.txt  constant_data.json
